[gd_scene format=3 uid="uid://bdgoyj2g1b5er"]

[ext_resource type="Script" uid="uid://imihlonpwwkl" path="res://Scripts/Player.gd" id="1_ovk2j"]
[ext_resource type="LabelSettings" uid="uid://b1qvlp5nsm1ts" path="res://Assets/Writing/buttonSetting.tres" id="2_67pri"]

[node name="Player" type="Control" unique_id=2132586905]
z_index = 1
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovk2j")

[node name="Left" type="Label" parent="." unique_id=2025177125]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 26.0
offset_top = -27.0
offset_right = 100.0
offset_bottom = 10.0
grow_vertical = 2
scale = Vector2(1.5, 1.5)
text = "LEFT"
label_settings = ExtResource("2_67pri")

[node name="LeftButton" type="Button" parent="Left" unique_id=689819201]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Right" type="Label" parent="." unique_id=1922773366]
layout_mode = 0
offset_left = 965.00006
offset_top = 297.0
offset_right = 1064.0
offset_bottom = 334.0
scale = Vector2(1.5, 1.5)
text = "Right"
label_settings = ExtResource("2_67pri")

[node name="RightButton" type="Button" parent="Right" unique_id=1813775618]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LostCase" type="Button" parent="." unique_id=1292142178]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 160.0
grow_horizontal = 0

[connection signal="pressed" from="Left/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Right/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="pressed" from="LostCase" to="." method="_on_lost_case_pressed"]
